--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,4 +1,6 @@
 pre-commit:
   commands:
-    lint:
-      run: golangci-lint run -fix
+#    printpath:
+#      run: echo $PATH
+#    lint:
+#      run: /home/vlad/go/bin/golangci-lint run --fix
