--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-HTTP_LISTEN_ADDRESS=:3000
+HTTP_LISTEN_ADDRESS=:3001
 JWT_SECRET=somethingsupersecretTHATNOBODYKNOWS
 MONGO_DB_NAME=hotel-reservation
-MONGO_DB_URL=mongodb://localhost:27017
+MONGO_DB_URL=mongodb://mongoadmin:bdung@localhost:27017
 MONGO_DB_URL_TEST=mongodb://localhost:27017
